fix: wrong position header

--- a/online-zoo/pages/sass/layout/_header.scss
+++ b/online-zoo/pages/sass/layout/_header.scss
@@ -6,7 +6,7 @@
     align-items: center;
   }
   position: relative;
-  z-index: 1;
+  z-index: 2;
 }
 
 
